fixed padding for project section on mobile

--- a/src/styles/projects.sass
+++ b/src/styles/projects.sass
@@ -15,7 +15,7 @@ $slideVertical: 90vw
     min-height: 100vh
     background-color: $primary
     @media screen and ( max-width: 420px )
-        padding-top: 20vh
+        padding-top: 20px
     .row1
         height: calc(15vw + 100px)
         margin-top: 50px
